--- a/index.html
+++ b/index.html
@@ -147,18 +147,17 @@
       </section>
       <section class="khan">
         <div class="khan__container">
-          <div class="khan__autor">Салман Хан</div>
-          <div class="khan__title">Весь мир — школа</div>
+          <h2 class="khan__autor">Салман Хан</h2>
+          <p class="khan__title">Весь мир — школа</p>
           <blockquote class="khan__quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по
             всему миру. Книгу «Весь мир — школа» нужно прочитать всем, кто занимается образованием — так учащиеся
             повсюду смогут получить навыки и знания, которые приносят успех в школе, карьере и жизни.</blockquote>
-          <div class="khan__quote-autor">Джордж Лукас</div>
-          <div class="khan__quote-autor-subline">Кинорежиссер, продюсер</div>
+          <p class="khan__quote-autor">Джордж Лукас</p>
+          <p class="khan__quote-autor-subline">Кинорежиссер, продюсер</p>
           <div class="khan__book-container">
             <img src="./images/khan-book.jpg" class="khan__book-pic" alt="Обложка книги"></img>
             <a href="#" class="khan__buy-link">Купить книгу &rarr;</a>
           </div>
-
         </div>
       </section>
       <section class="kaufman">
@@ -211,9 +210,9 @@
         <div class="kaufman__triangle rotation"></div>
       </section>
       <div class="resources">
-        <div class="section-title">Полезные ресурсы</div>
-        <div class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</div>
-        <div class="rosources__logo-zone">
+        <h2 class="section-title">Полезные ресурсы</h2>
+        <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
+        <div class="logo-zone">
           <a href="#"><img class="resources__link" src="./images/logo/resources-arzamas.svg" alt="Лого ссылки"></a>
           <a href="#"><img class="resources__link" src="./images/logo/resources-n1.svg" alt="Лого ссылки"></a>
           <a href="#"><img class="resources__link" src="./images/logo/resources-strelka.svg" alt="Лого ссылки"></a>
