--- a/index.html
+++ b/index.html
@@ -43,29 +43,29 @@
         <p class="section-subtitle">Пять практик от Барбары Оакли</p>
         <div class="cards">
           <div class="cards__item">
-            <img src="./images/cards-attention.png" class="cards__image" alt="Картинка к описанию"></img>
+            <img src="./images/cards-attention.png" class="cards__image" alt="Картинка к описанию">
             <h3 class="cards__title">Два вида внимания</h3>
             <p class="cards__description">Глубокие знания возникают, если чередовать сфокусированное и рассеянное
               мышление.</p>
           </div>
           <div class="cards__item">
-            <img src="./images/cards-recall.png" class="cards__image" alt="Картинка к описанию"></img>
+            <img src="./images/cards-recall.png" class="cards__image" alt="Картинка к описанию">
             <h3 class="cards__title">Recall</h3>
             <p class="cards__description">Вспоминайте изученное — это позволит соединить разрозненные порции памяти.</p>
           </div>
           <div class="cards__item">
-            <img src="./images/cards-interliving.png" class="cards__image" alt="Картинка к описанию"></img>
+            <img src="./images/cards-interliving.png" class="cards__image" alt="Картинка к описанию">
             <h3 class="cards__title">Интерливинг</h3>
             <p class="cards__description">Изучайте несколько навыков одновременно, они обогащают друг друга.</p>
           </div>
           <div class="cards__item">
-            <img src="./images/cards-question.png" class="cards__image" alt="Картинка к описанию"></img>
+            <img src="./images/cards-question.png" class="cards__image" alt="Картинка к описанию">
             <h3 class="cards__title">Вопросы</h3>
             <p class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно
               волнует.</p>
           </div>
           <div class="cards__item">
-            <img src="./images/cards-competence.png" class="cards__image" alt="Картинка к описанию"></img>
+            <img src="./images/cards-competence.png" class="cards__image" alt="Картинка к описанию">
             <h3 class="cards__title">Иллюзия компетентности</h3>
             <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы
               владеете новой темой.</p>
@@ -77,11 +77,11 @@
         <p class="section-subtitle">Для тех, кто любит прокрастинировать</p>
         <div class="video__iframes">
           <iframe class="video__iframe" width="515" height="316" src="https://www.youtube.com/embed/xN8a2cmZVtE"
-            title="YouTube video player" frameborder="0"
+            title="YouTube video player"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
             allowfullscreen></iframe>
           <iframe class="video__iframe" width="515" height="316" src="https://www.youtube.com/embed/wKU25Gd9yd4"
-            title="YouTube video player" frameborder="0"
+            title="YouTube video player"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
             allowfullscreen></iframe>
         </div>
@@ -154,7 +154,7 @@
           <p class="khan__quote-autor">Джордж Лукас</p>
           <p class="khan__quote-autor-subline">Кинорежиссер, продюсер</p>
           <div class="khan__book-container">
-            <img src="./images/khan-book.jpg" class="khan__book-pic" alt="Обложка книги"></img>
+            <img src="./images/khan-book.jpg" class="khan__book-pic" alt="Обложка книги">
             <a href="#" class="khan__buy-link">Купить книгу &rarr;</a>
           </div>
         </div>
