--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <img class="logo logo_place_header" src="./images/logo_place_header.svg" alt="Изображение лого">
       <h1 class="header__title">Научиться учиться</h1>
       <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей
-        жизни?<a class="header__link" href="#"> Узнать &rarr;</a></p>
+        жизни?<a class="header__link" href="#" target="_blank" rel="noopener"> Узнать &rarr;</a></p>
       <img class="header__main-illustration" src="./images/header-image.png" alt="Изображение шапки">
       <div class="header__square-pic rotation"></div>
     </header>
@@ -76,12 +76,10 @@
         <h2 class="section-title">Видео нa TED</h2>
         <p class="section-subtitle">Для тех, кто любит прокрастинировать</p>
         <div class="video__iframes">
-          <iframe class="video__iframe" width="515" height="316" src="https://www.youtube.com/embed/xN8a2cmZVtE"
-            title="YouTube video player"
+          <iframe class="video__iframe" src="https://www.youtube.com/embed/xN8a2cmZVtE" title="YouTube video player"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
             allowfullscreen></iframe>
-          <iframe class="video__iframe" width="515" height="316" src="https://www.youtube.com/embed/wKU25Gd9yd4"
-            title="YouTube video player"
+          <iframe class="video__iframe" src="https://www.youtube.com/embed/wKU25Gd9yd4" title="YouTube video player"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
             allowfullscreen></iframe>
         </div>
@@ -101,7 +99,7 @@
       <section class="feynman">
         <h2 class="feynman__tttle">Метод Фейнмана</h2>
         <p class="feynman__subtitle">Выучить и не забыть.</p>
-        <a href="#" class="feynman__link">Подробнее &rarr;</a>
+        <a href="#" class="feynman__link" target="_blank" rel="noopener">Подробнее &rarr;</a>
         <img src="./images/feynman.png" alt="Изображение Фейнман" class="feynman__image">
       </section>
       <section class="digits">
@@ -155,7 +153,7 @@
           <p class="khan__quote-autor-subline">Кинорежиссер, продюсер</p>
           <div class="khan__book-container">
             <img src="./images/khan-book.jpg" class="khan__book-pic" alt="Обложка книги">
-            <a href="#" class="khan__buy-link">Купить книгу &rarr;</a>
+            <a href="#" class="khan__buy-link" target="_blank" rel="noopener">Купить книгу &rarr;</a>
           </div>
         </div>
       </section>
@@ -211,11 +209,11 @@
       <div class="resources">
         <h2 class="section-title">Полезные ресурсы</h2>
         <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
-        <div class="logo-zone">
-          <a href="#"><img class="resources__link" src="./images/logo/resources-arzamas.svg" alt="Лого ссылки"></a>
-          <a href="#"><img class="resources__link" src="./images/logo/resources-n1.svg" alt="Лого ссылки"></a>
-          <a href="#"><img class="resources__link" src="./images/logo/resources-strelka.svg" alt="Лого ссылки"></a>
-          <a href="#"><img class="resources__link" src="./images/logo/resources-polka.svg" alt="Лого ссылки"></a>
+        <div class="resources__logo-zone">
+          <a href="#" target="_blank" rel="noopener"><img class="resources__link" src="./images/logo/resources-arzamas.svg" alt="Лого ссылки"></a>
+          <a href="#" target="_blank" rel="noopener"><img class="resources__link" src="./images/logo/resources-n1.svg" alt="Лого ссылки"></a>
+          <a href="#" target="_blank" rel="noopener"><img class="resources__link" src="./images/logo/resources-strelka.svg" alt="Лого ссылки"></a>
+          <a href="#" target="_blank" rel="noopener"><img class="resources__link" src="./images/logo/resources-polka.svg" alt="Лого ссылки"></a>
         </div>
       </div>
     </main>
@@ -236,13 +234,13 @@
         <nav class="footer__column footer__column_content_social">
           <h3 class="footer__column-heading">Соцсети</h3>
           <ul class="footer__column-links">
-            <li><a href="#" class="footer__column-link"><img class="footer__social-icon" src="./images/youtube-icon.svg"
-                  alt="Лого Ютуб">
+            <li><a href="#" class="footer__column-link" target="_blank" rel="noopener"><img class="footer__social-icon"
+                  src="./images/youtube-icon.svg" alt="Лого Ютуб">
                 YouTube</a></li>
-            <li><a href="#" class="footer__column-link"><img class="footer__social-icon"
+            <li><a href="#" class="footer__column-link" target="_blank" rel="noopener"><img class="footer__social-icon"
                   src="./images/vk_color_white.svg" alt="Лого ВК"> ВКонтакте</a></li>
-            <li><a href="#" class="footer__column-link"><img class="footer__social-icon" src="./images/tiktok-icon.svg"
-                  alt="Лого ТикТок">
+            <li><a href="#" class="footer__column-link" target="_blank" rel="noopener"><img class="footer__social-icon"
+                  src="./images/tiktok-icon.svg" alt="Лого ТикТок">
                 TikTok</a></li>
           </ul>
         </nav>
